added text area with subscription data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
  <span> Link</span>
  <input type="url" id="notificationLink" />
  <br/>
+ <textarea id="subscription">
+
+ </textarea>
  <button id="doIt" onclick="clickToSubscribe()">Send notification</button>
  <script src="js/controller.js"></script>
 </body>
