added button for user permission

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
  </textarea>
  <button id="doIt" onclick="clickToSubscribe()">Send notification</button>
+ <button id="rP" onclick="requestPermission()">Send notification</button>
  <script src="js/controller.js"></script>
 </body>
 
