--- a/adult.html
+++ b/adult.html
@@ -17,7 +17,7 @@
                 var deviceHalfHeight = Math.floor(deviceHeight/2);
                 var notificationHeight = deviceHeight * 0.1;
 
-                arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
+                arrowIndicator.style.marginTop = `${deviceHalfHeight}px`;
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
