--- a/adult.html
+++ b/adult.html
@@ -15,9 +15,9 @@
                 var arrowIndicator = document.getElementById('indicator');
                 var deviceHeight = window.innerHeight;
                 var deviceHalfHeight = Math.floor(deviceHeight/2);
-                var notificationHeight = deviceHeight * 0.1;
+                var notificationHeight = deviceHeight * 0.2;
 
-                arrowIndicator.style.marginTop = `${deviceHalfHeight}px`;
+                arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
