--- a/adult.html
+++ b/adult.html
@@ -15,8 +15,11 @@
                 var arrowIndicator = document.getElementById('indicator');
                 var deviceHeight = window.innerHeight;
                 var deviceHalfHeight = Math.floor(deviceHeight/2);
+                var notificationHeight = deviceHeight * 0.2;
 
-                arrowIndicator.style.marginTop = `${deviceHalfHeight}px`;
+                arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
+                arrowIndicator.style.right = `${5}px`;
+
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
