--- a/adult.html
+++ b/adult.html
@@ -18,7 +18,7 @@
                 var notificationHeight = deviceHeight * 0.2;
 
                 arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
-                arrowIndicator.style.right = `${5}px`;
+                arrowIndicator.style.right = `${5}em`;
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
