--- a/adult.html
+++ b/adult.html
@@ -7,6 +7,10 @@
 
     <body>
             <div id="top-notification"> </div>
+
+            <div id="permission">
+
+            </div>
             <div id="indicator">
                 <img src="images/up-arrow.svg">
             </div>
@@ -15,10 +19,15 @@
                 var arrowIndicator = document.getElementById('indicator');
                 var deviceHeight = window.innerHeight;
                 var deviceHalfHeight = Math.floor(deviceHeight/2);
-                var notificationHeight = deviceHeight * 0.15;
+                var notificationHeight = deviceHeight * 0.2;
 
-                arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
-                arrowIndicator.style.right = `${5}em`;
+                document.getElementById('permission').style.height = `${notificationHeight}px`;
+                document.getElementById('permission').style.marginTop = `${deviceHalfHeight - (notificationHeight/2)}px`;
+
+                /* arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
+                arrowIndicator.style.right = `${5}px`; */
+                
+                alert(deviceHeight);
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
