--- a/adult.html
+++ b/adult.html
@@ -21,13 +21,13 @@
                 var deviceHalfHeight = Math.floor(deviceHeight/2);
                 var notificationHeight = deviceHeight * 0.2;
 
-                document.getElementById('permission').style.height = `${notificationHeight}px`;
+                /*document.getElementById('permission').style.height = `${notificationHeight}px`;
                 document.getElementById('permission').style.marginTop = `${deviceHalfHeight - (notificationHeight/2)}px`;
 
-                /* arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
+                 arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
                 arrowIndicator.style.right = `${5}px`; */
                 
-                alert(deviceHeight);
+                //alert(deviceHeight);
                 //arrowIndicator.style.cssFloat = 'right';
                 
             </script>
