--- a/adult.html
+++ b/adult.html
@@ -25,7 +25,8 @@
                 document.getElementById('permission').style.marginTop = `${deviceHalfHeight - (notificationHeight/2)}px`;
 
                  arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
-                arrowIndicator.style.right = `${5}px`; */
+                arrowIndicator.style.right = `${5}px`; 
+                */
                 
                 //alert(deviceHeight);
                 //arrowIndicator.style.cssFloat = 'right';
