--- a/adult.html
+++ b/adult.html
@@ -25,7 +25,7 @@
                 document.getElementById('permission').style.marginTop = `${deviceHalfHeight - (notificationHeight/2)}px`;*/
 
                 arrowIndicator.style.marginTop = `${deviceHalfHeight + notificationHeight}px`;
-                arrowIndicator.style.right = `${-10}px`; 
+                arrowIndicator.style.marginRight = `${10}px`; 
                 
                 
                 //alert(deviceHeight);
