--- a/adult.html
+++ b/adult.html
@@ -40,10 +40,10 @@
                             <div class="modal-body">
                                 <p>${msg}</p>
                             </div>
-                            <div class="modal-footer">
+                            <!--<div class="modal-footer">
                                 <button type="button" class="btn btn-danger" data-dismiss="modal"> ${deny} </button>
                                 <button type="button" onclick="requestPermission()" class="btn btn-default" data-dismiss="modal"> ${allow} </button>
-                            </div>
+                            </div>-->
                         </div>
                     </div>`;
 
