--- a/adult.html
+++ b/adult.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Instal</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/adult.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             var deviceHeight = window.innerHeight;            
             var deviceWidth = window.innerWidth;            
             var halfHeight = Math.floor(deviceHeight / 2);            
-            var notificationHeight = deviceHeight * 0.2;            
+            var notificationHeight = deviceHeight * 0.2;             
 
             function customModal(title, msg, allow, deny) {
                 var modalContent = `
