added new arrow of light color

--- a/adult.html
+++ b/adult.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="modal fade" id="myModal" role="dialog"></div>               
     </div>
-    <img id="indicator" src="images/up-arrow.svg"></div> 
+    <img id="indicator" src="images/light-up-arrow.svg"></div> 
     
     <script>
             
